src/App.css
/* Modalità Normale */
:root {
  --bg-col-primary: #28559A;
  --bg-col-secondary: #DDEDF4;
  --txt-col-primary: #DDEDF4;
  --txt-col-secondary: #28559A;
}

/* Dark Mode */
body.dark-mode {
  --bg-col-primary: #0F2557;
  --bg-col-secondary: #28559A;
  --txt-col-primary: #DDEDF4;
  --txt-col-secondary: #DDEDF4;
}

.appContainer {
  height: 100vh;
}

.appContent {
  width: 100%;
}

